File/bank-ops-lab/bank-ops-lab/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankops
  labels:
    app.kubernetes.io/part-of: bank-ops-lab
    environment: production
