File/bank-ops-lab/bank-ops-lab/k8s/base/service-websphere.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankops-websphere-svc
  namespace: bankops
  labels:
    app: bankops-websphere
spec:
  type: ClusterIP
  selector:
    app: bankops-websphere
  ports:
    - name: http
      port: 9080
      targetPort: http
    - name: https
      port: 9443
      targetPort: https
